@@ -1,0 +1,2 @@
+Remove empty debian/tests/control.
+Fixed-Lintian-Tags: empty-debian-tests-control
